FXS-Platform: add controllers for advisory and lawsuit

--- a/fxs-platform-web/src/main/resources/i18n/messages-core_zh_CN.properties
+++ b/fxs-platform-web/src/main/resources/i18n/messages-core_zh_CN.properties
@@ -2,3 +2,4 @@ fxs.platform.application.data.initializer.start=使用{0}初始化数据
 fxs.platform.application.data.initializer.end=使用{0}初始化数据完毕
 fxs.platform.application.data.initializer.fali=系统数据初始化失败{0}
 fxs.platform.application.data.convert.fali=系数据转换失败
+fxs.platform.application.advisory=信息提交成功
