--- a/fxs-platform-web/src/main/resources/i18n/messages-core_en_US.properties
+++ b/fxs-platform-web/src/main/resources/i18n/messages-core_en_US.properties
@@ -3,3 +3,4 @@ fxs.platform.application.data.initializer.end=Data initialization finished - {0}
 fxs.platform.application.data.initializer.fali=Failed to initialize system data {0}
 fxs.platform.application.data.convert.fali=Data convert failed
 fxs.platform.application.advisory=Information already submitted successfully
+fxs.platform.application.province=Successfully get all province
