--- a/fxs-platform-web/src/main/resources/i18n/messages-core_zh_CN.properties
+++ b/fxs-platform-web/src/main/resources/i18n/messages-core_zh_CN.properties
@@ -2,9 +2,7 @@ fxs.platform.application.data.initializer.start=使用{0}初始化数据
 fxs.platform.application.data.initializer.end=使用{0}初始化数据完毕
 fxs.platform.application.data.initializer.fali=系统数据初始化失败{0}
 fxs.platform.application.data.convert.fali=系数据转换失败
-fxs.platform.application.advisory.save=法律咨询信息提交成功
-fxs.platform.application.advisory.get=获取法律咨询信息成功. 咨询类型为 {0}
-fxs.platform.application.lawsuit.save=打官司信息提交成功
-fxs.platform.application.lawsuit.get=获取打官司信息成功. 咨询类型为 {0}
+fxs.platform.application.case.save=法律咨询信息提交成功
+fxs.platform.application.case.get=获取法律咨询信息成功. 咨询类型为 {0}
 fxs.platform.application.province=获取省份信息成功
 fxs.platform.application.city=获取城市信息成功
