--- a/fxs-platform-web/src/main/resources/i18n/messages-core_en_US.properties
+++ b/fxs-platform-web/src/main/resources/i18n/messages-core_en_US.properties
@@ -2,9 +2,7 @@ fxs.platform.application.data.initializer.start=Use {0} to start data initializa
 fxs.platform.application.data.initializer.end=Data initialization finished - {0}
 fxs.platform.application.data.initializer.fali=Failed to initialize system data {0}
 fxs.platform.application.data.convert.fali=Data convert failed
-fxs.platform.application.advisory.save=Information already submitted successfully
-fxs.platform.application.advisory.get=Get information successfully. And type is {0}
-fxs.platform.application.lawsuit.save=Information already submitted successfully
-fxs.platform.application.lawsuit.get=Get information successfully. And type is {0}
+fxs.platform.application.case.save=Information already submitted successfully
+fxs.platform.application.case.get=Get information successfully. And type is {0}
 fxs.platform.application.province=Successfully get all province
 fxs.platform.application.city=Successfully get all cities
