--- a/fxs-platform-web/src/main/resources/i18n/messages-core_en_US.properties
+++ b/fxs-platform-web/src/main/resources/i18n/messages-core_en_US.properties
@@ -8,3 +8,4 @@ fxs.platform.application.case.get.success=Get information successfully.
 fxs.platform.application.case.get.failure=Failure get information.
 fxs.platform.application.province=Successfully get all province
 fxs.platform.application.city=Successfully get all cities
+fxs.platform.application.falltypus=Successfully get falltypus
