--- a/fxs-platform-web/src/main/resources/i18n/messages-core_zh_CN.properties
+++ b/fxs-platform-web/src/main/resources/i18n/messages-core_zh_CN.properties
@@ -8,3 +8,4 @@ fxs.platform.application.case.get.success=获取信息成功.
 fxs.platform.application.case.get.failure=获取信息失败.
 fxs.platform.application.province=获取省份信息成功
 fxs.platform.application.city=获取城市信息成功
+fxs.platform.application.falltypus=获取案件类型信息成功
